@@ -22,6 +22,8 @@
 20. When prompting to clear queue ask if all tracks, upcoming, or previous
     should be removed.
 21. Disable context menu (long-press) for items on mobile devices.
+22. Dim screensaver text.
+23. Move screensaver text position to random location every 10 minutes.
 
 3.2.4
 -----
